update index file and add main css file

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title>Jeremy Le-Poeng</title>
+  <title>Your page title here</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-	<h1>Hey</h1>
-	<p>hey</p>
+  <h1>hello</h1>
+  <p>my name is jeremy.</p>
 </body>
+
 </html>
