add a self photo and create a gitignore file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
 <body>
   <h1>hello</h1>
-  <p>my name is jeremy.</p>
+  <p>my name is jeremy. welcome to my page.</p>
+   <img src="jeremybball.jpg">
 </body>
 
 </html>
