--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1>hello</h1>
   <p>my name is jeremy. welcome to my page.</p>
-   <img src="/jeremybball.jpg">
+   <img src="https://raw.githubusercontent.com/jeremylepoeng/jeremylepoeng.github.io/master/jeremybball.JPG">
 </body>
 
 </html>
